# basic_rust_engine

./: Cargo.toml  README.md
docs/: tearing.txt
src/: app.rs  camera.rs  chunk.rs  cube.rs  event_loop.rs  graphics.rs  input.rs  main.rs  shader.wgsl  texture.rs  uniforms.rs  vertex.rs  world.rs  world_update.rs
